[package]
name = "lunac"
version = "0.1.3"
authors.workspace = true
edition.workspace = true
description = "Lunaris compiler - build tool and plugin manager for the Lunaris video editor"
license = "MIT OR Apache-2.0"
repository = "https://github.com/lunaris-systems/lunac"
homepage = "https://github.com/lunaris-systems/lunac"
documentation = "https://docs.rs/lunac"
keywords = ["lunaris", "video-editor", "build-tool", "plugin-manager"]
categories = ["command-line-utilities", "development-tools::build-utils"]
readme = "README.md"

[[bin]]
name = "lunac"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"

